# hello_cpp

./: CMakeLists.txt  main.cpp
